// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bifrost Polkadot Accounts > transfer_allow_death > transfer of some funds does not kill sender account > events when Alice transfers 1 ED to Bob with sufficient balance 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": 10000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`burn\` > burning funds below ED leads to account reaping > events for burn 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Burned",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`burn\` > burning funds from account works > events when Alice self-burns funds 1`] = `
[
  {
    "data": {
      "amount": 500000000000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Burned",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for first issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for second issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`force_transfer\` > force transferring origin below ED can kill it > events of \`force_transfer\` from Alice to Bob 1`] = `
[
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "amount": "(number)",
    },
    "method": "DustLost",
    "section": "balances",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(number)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`transfer_all\` > account with reserves cannot transfer all funds > events when Alice with reserve transfers all to Bob 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(rounded 100000000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`transfer_all\` > transfer all with keepAlive false kills sender > events when Alice transfers all to Bob with \`keepAlive = false\` 1`] = `
[
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(rounded 100000000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > \`transfer_all\` > transfer all with keepAlive true leaves 1 ED > events when Alice transfers all to Bob with \`keepAlive = true\` 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(rounded 99000000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via multisig creation > liquidity restricted action - RPC pre-validation failure 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via multisig creation 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via proxy addition > liquidity restricted action - RPC pre-validation failure 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via proxy addition 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via referendum submission > liquidity restricted action - RPC pre-validation failure 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via referendum submission 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and vested transfer, triggered via multisig creation > deposit action success events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 200000000000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Reserved",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and vested transfer, triggered via multisig creation > liquidity restricted action events 1`] = `[]`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and vested transfer, triggered via proxy addition > deposit action success events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 200000000000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Reserved",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and vested transfer, triggered via proxy addition > liquidity restricted action events 1`] = `[]`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and vested transfer, triggered via referendum submission > deposit action success events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Reserved",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and manual lock, triggered via multisig creation > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and manual lock, triggered via proxy addition > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and manual lock, triggered via referendum submission > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and vested transfer, triggered via multisig creation > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and vested transfer, triggered via proxy addition > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Hydration Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and vested transfer, triggered via referendum submission > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Hydration Accounts > transfer_allow_death > account with reserves is not reaped when transferring funds > events when Alice with reserve transfers to Bob 1`] = `[]`;

exports[`Hydration Accounts > transfer_allow_death > leaving an account below ED kills it > events when Alice \`transfer_allow_death\` to Bob 1`] = `
[
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": 1000000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > transfer_allow_death > leaving an account below ED kills it > unstable events when Alice \`transfer_allow_death\` to Bob 1`] = `
[
  {
    "data": {
      "amount": "(number)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "amount": "(number)",
    },
    "method": "DustLost",
    "section": "balances",
  },
]
`;

exports[`Hydration Accounts > transfer_allow_death > transfer of some funds does not kill sender account > events when Alice transfers 1 ED to Bob with sufficient balance 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": 1000000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;
